# engine

./: .gitignore  CHANGELOG.md  README.md  TODO.md  cleanup_artifacts.py  pyproject.toml
config/: protocol.yaml  t3_external_benchmark_protocol.yaml
exp/: __init__.py  adaptive_gate.py  anchor_audit.py  attribution.py  cli.py  compare.py  constants.py  dashboard.py  effect_surface.py  gating.py  hypothesis_engine.py  inverse_arms.py  io.py  knowledge_graph.py  memo.py  models.py  preflight.py  reporting.py  schema_validator.py  shared.py  simulator.py  spec_evolution.py  spec_utils.py  store.py  synergy.py
plans/: innovation_roadmap.md  production_ready_fixes.md
schemas/: comparison_report.schema.json  experiment_spec.schema.json  run_result.schema.json
scripts/: build_consolidated_memo.py  generate_adversarial_specs.py  generate_specs.py  results_watcher.py  run_recovery.py  run_stage.py  start_run_window.py
tests/: test_adaptive_gate.py  test_anchor_audit.py  test_attribution.py  test_benchmark_pipeline.py  test_budget_guardrail.py  test_cli.py  test_cost_matched_baseline.py  test_dashboard.py  test_determinism.py  test_effect_surface.py  test_failure_modes.py  test_gating.py  test_generate_adversarial_specs.py  test_generate_specs.py  test_hypothesis_engine.py  test_integration_pipeline.py  test_integration_wiring.py  test_inverse_arms.py  test_knowledge_graph.py  test_memo.py  test_next_steps_specs.py  test_preflight.py  test_reporting.py  test_runners.py  test_schema_validation.py  test_spec_evolution.py  test_spec_utils.py  test_synergy.py
(+211 files in other folders)
