[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engine-exp"
version = "0.1.0"
description = "Stage-gated experiment harness for six long-context and reasoning tracks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

# Adding additional metadata
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["experiments", "reasoning", "long-context", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
exp = "exp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["exp*"]
